# happy_landlords

./: README.md
client/: CMakeLists.txt  main.cpp  res.qrc
client/buid/: CMakeCache.txt
client/card/: CMakeLists.txt  card.cpp  card.h  cards.cpp  cards.h
client/control/: CMakeLists.txt  bgmcontrol.cpp  bgmcontrol.h  datamanager.cpp  datamanager.h  gamecontrol.cpp
client/crypto/: CMakeLists.txt  aescrypto.cpp
client/player/: CMakeLists.txt  player.cpp  player.h  player.rar  robot.cpp
client/serialize/: CMakeLists.txt  codec.cpp  codec.h  information.pb.cc  information.pb.h  information.proto
client/strategy/: CMakeLists.txt  playhand.cpp  playhand.h  strategy.cpp
client/tcp/: CMakeLists.txt  tcpsocket.cpp  tcpsocket.h
client/thread/: CMakeLists.txt  betqueue.cpp  betqueue.h  cardsqueue.cpp  cardsqueue.h  communication.cpp  communication.h  robotgrablord.cpp  robotgrablord.h  robotplayhand.cpp  robotplayhand.h  taskqueue.cpp  taskqueue.h
client/windows/: CMakeLists.txt  animationwindow.cpp  animationwindow.h  buttongroup.ui  cardpanel.cpp  gamemode.cpp  gamepanel.cpp  gamepanel.h  joinroom.cpp  joinroom.h  login.cpp  login.h  login.ui  scorepanel.ui
